<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ajou.android.acma.MainActivity">

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="@color/BLACK"
        android:textSize="20dp"
        android:text="@string/app_name"
        />

    <Button
        android:id="@+id/lectureRegisterButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:onClick="onButtonClicked"
        android:text="@string/lecture_register"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/lectureRankingButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/lectureRegisterButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onButtonClicked"
        android:text="@string/lecture_rangking"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/timetableButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/lectureRegisterButton"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="25dp"
        android:onClick="onButtonClicked"
        android:text="@string/timetable"
        android:textStyle="bold"/>

</RelativeLayout>