<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/item_border"
        android:padding="20dp">

        <LinearLayout
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecture_name"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecture_major"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecture_professor"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecture_grade"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecture_code"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecture_location"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecture_time"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecture_maxNum"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecture_num"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lec_name_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="init"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/BLACK"/>
            <TextView
                android:id="@+id/lec_major_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="init"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/BLACK"/>
            <TextView
                android:id="@+id/lec_professor_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="init"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/BLACK"/>
            <TextView
                android:id="@+id/lec_grade_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="init"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/BLACK"/>
            <TextView
                android:id="@+id/lec_code_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="init"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/BLACK"/>
            <TextView
                android:id="@+id/lec_location_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="init"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/BLACK"/>
            <TextView
                android:id="@+id/lec_time_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="init"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/BLACK"/>
            <TextView
                android:id="@+id/lec_maxNum_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="init"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/BLACK"/>
            <TextView
                android:id="@+id/lec_num_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="init"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/BLACK"/>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/registerButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/register_button"
        android:textStyle="bold"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"/>
</RelativeLayout>